# googler-ng

./: .gitignore  CLAUDE.md  STATUS.md  dump.html  googler  googler.py  pyproject.toml  refactor.md  tasks.md  test-chrom110-nogbv.py  test.py  test_enablejs.py  test_headers.py
.agents/rules/: no-meta-scripts.md  python-standards.md
.agents/workflows/: audit-security.md  execute-phase.md  scaffold-test.md
googler_ng/: __main__.py
googler_ng/config/: __init__.py  selectors.py
googler_ng/core/: .connection.py.swp  connection.py  url.py
googler_ng/dom/: engine.py
googler_ng/parser/: __init__.py  google.py  models.py
googler_ng/ui/: cli.py  printer.py  repl.py
googler_ng/utils/: text.py
src/googler_ng/core/: __init__.py  connection.py
src/googler_ng/dom/: __init__.py  engine.py
src/googler_ng/ui/: __init__.py  colors.py  repl.py
src/googler_ng/utils/: __init__.py  helpers.py
