[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "googler-ng"
version = "0.1.0"
description = "Google from the command line (Next Generation)."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
authors = [
    {name = "Henri Hakkinen"},
    {name = "Arun Prakash Jana", email = "engineerarun@gmail.com"},
    {name = "Zhiming Wang", email = "zmwangx@gmail.com"},
    {name = "grassdionera"},
    {name = "mcladams"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mcladams/googler-ng"
Repository = "https://github.com/mcladams/googler-ng.git"
Issues = "https://github.com/mcladams/googler-ng/issues"

[project.scripts]
googler-ng = "googler_ng.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["googler_ng*"]
